@@ -1,18 +1,21 @@
 package me.sungbin.photoapp.config;
 
-import me.sungbin.photoapp.api.MDCLogFilter;
+import me.sungbin.photoapp.api.MDCFilter;
 import org.springframework.boot.web.servlet.FilterRegistrationBean;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class WebConfig {
+
     @Bean
     public FilterRegistrationBean getFilterRegistrationBean() {
-        FilterRegistrationBean registrationBean = new FilterRegistrationBean(new MDCLogFilter());
-        registrationBean.setUrlPatterns(Arrays.asList("/v1/*"));
+        FilterRegistrationBean registrationBean = new FilterRegistrationBean(new MDCFilter());
+        registrationBean.setUrlPatterns(List.of("/v1/*"));
+
         return registrationBean;
     }
 }
